Fixed wrong colour for dark mode hover

--- a/Fullstack/frontend/src/styles/index.css
+++ b/Fullstack/frontend/src/styles/index.css
@@ -77,11 +77,11 @@ code {
 
   --primary-hover: #49507F;
   --secondary-hover: #73657C;
-  --lightsecondary-hover: #C0B7C9;
+  --lightsecondary-hover: #4C3E51;
 
 
   --light-green: #2E6B32;
-  --light-green-hover: #96CC90;
+  --light-green-hover: #2A632D;
 
   --green: #3D8B40;
 
